<resources>
    <string name="app_name">SmartChef</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heading_desc">What\'s on your agenda for today? Let me help you plan your perfect menu!</string>
    <string name="loading_main_desc">Discover personalized recipes based on your preferences and ingredients.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nutrient_value">%1$s %2$s</string>
    <string name="step_text">Step %d: %s</string>
    <string name="ingredients_text">Ingredients: %s</string>
    <string name="instructions_steps">Instructions &amp; Steps</string>
    <string name="like_icon">like icon</string>
    <string name="recipe_time_format">%d min</string>
    <string name="recipe_health_score_format">Health Score: %.1f</string>
    <string name="burger">burger</string>
    <string name="lunch">Lunch</string>
    <string name="cake">cake</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="ice_cream">icecream</string>
    <string name="dessert">Dessert</string>
    <string name="juice">juice</string>
    <string name="drinks">Drinks</string>
    <string name="show_more">Show More</string>
    <string name="popular_food">Top Recommended Foods for You</string>
    <string name="home_page_main_heading">Welcome Chief!</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="home">Home</string>
    <string name="splash_heading">Loading delicious recipes...</string>
    <string name="splash_title">Smart Chef</string>
    <string name="login_title">Smart Chef - Login</string>
    <string name="signup_title">Smart Chef - Sign Up</string>
    <string name="menu">Menu</string>
    <string name="clear_all">Clear All</string>
    <string name="cooking">Cooking</string>
    <string name="food_details">Food Details</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recently_ingredients_search">Recently Ingredients Search</string>
    <string name="popular_ingredients_search">Popular Ingredients Search</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="don_t_have_an_account">New here? Sign Up</string>
    <string name="i_have_an_account">Let`s Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="blur">blur</string>
    <string name="create_and_organize_your_weekly_meal_plan">Create and organize your weekly meal plan</string>
    <string name="todo">todo</string>
    <string name="set_note">Set Note</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="meal_note_hint">Write something helpful, fun, or motivational about this meal...</string>
    <string name="save_meal_plan_message">Ready to dive into your delicious meal plans for the month</string>
    <string name="no_meals_illustration">No meals illustration</string>
    <string name="empty_meal_message">No meals planned yet. Start organizing your tasty week!</string>
    <string name="toast_message">Toast Message</string>
    <string name="default_web_client_id">926582632639-790l1nijelbhrjbu1c40g08ahtj15btl.apps.googleusercontent.com</string>

</resources>