<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_gradient_background"
    tools:context=".LoginActivity">


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/bgIllustration"
        android:layout_width="257dp"
        android:layout_height="188dp"
        android:layout_marginTop="88dp"
        android:scaleType="fitCenter"
        android:src="@drawable/login_cooking_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/login_title"
        android:textColor="@color/primary_color"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/bricolage_bold"
        app:layout_constraintBottom_toTopOf="@+id/bgIllustration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/roundedContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_top_corners"
        app:layout_constraintTop_toBottomOf="@id/bgIllustration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:padding="40dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLoginEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_email"
            tools:layout_editor_absoluteX="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bricolage_regular"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLoginPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/textLoginEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bricolage_regular"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/forgot_password"
            android:textColor="@color/primary_color"
            android:fontFamily="@font/bricolage_regular"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLoginPassword" />


        <TextView
            android:id="@+id/redirectToSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/primary_color"
            android:textSize="12sp"
            android:fontFamily="@font/bricolage_regular"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toStartOf="@+id/tvForgotPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLoginPassword"
            app:layout_constraintVertical_bias="0.428" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary_color"
            android:text="Login"
            android:textSize="18sp"
            android:fontFamily="@font/bricolage_regular"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:cornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"/>

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:fontFamily="@font/bricolage_regular"
            android:textSize="16sp"
            android:textColor="@color/surface_container"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogleLogin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/continue_with_google"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:cornerRadius="16dp"
            android:fontFamily="@font/bricolage_regular"
            app:icon="@drawable/ic_google_logo"
            app:iconTint="@null"
            app:iconSize="24dp"
            app:iconGravity="start"
            app:strokeColor="@color/gray_light"
            app:strokeWidth="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOr"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/login_blur_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:alpha="0.7"
        android:contentDescription="@string/blur"
        android:visibility="gone"/>


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/login_loading"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="fitCenter"
        android:src="@drawable/food_spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>